--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/koayan
+spring.datasource.url = jdbc:mysql://localhost:3306/kaoyan
 spring.datasource.username = root
 spring.datasource.password = mysqlpwd
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
