--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   kaoyan:
     image: kaoyan
     build: .
+    restart: always
     ports:
       - 3003:8080
     environment:
@@ -17,6 +18,7 @@ services:
 
   mysql:
     image: mysql:latest
+    restart: always
     ports:
       - 3306
     environment:
