--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,36 @@
 version: '3'
 
 services:
-  kaoyan:
+  mysql:
+    image: mysql:latest
+    build:
+      context: .
+      dockerfile: DockerfileMySQL
+    restart: always
+    expose:
+      - "3306"
+    environment:
+      TZ: Asia/Shanghai
+      MYSQL_ROOT_PASSWORD: mysqlpwd
+    volumes:
+      - /etc/locatime:/etc/locatime:ro
+      - ./var/lib/mysql:/var/lib/mysql
+      - ./sql/create_db.sql:/docker-entrypoint-initdb.d/create_db.sql
+    networks:
+      - kaoyan
+
+  app:
     image: dashmrl/kaoyan:latest
     restart: always
     ports:
-      - 3003:8080
+      - "127.0.0.1:3003:8080"
     environment:
-      - TZ=Asia/Shanghai
+      TZ: Asia/Shanghai
     volumes:
       - /etc/locatime:/etc/locatime:ro
     depends_on:
       - mysql
     networks:
-      - kaoyanApp
-
-  mysql:
-    image: mysql:latest
-    restart: always
-    ports:
-      - 3306
-    environment:
-      - TZ=Asia/Shanghai
-      - MYSQL_ROOT_PASSWORD=mysqlpwd
-    volumes:
-      - /etc/locatime:/etc/locatime:ro
-      - ./var/lib/mysql:/var/lib/mysql
-    networks:
-      - kaoyanApp
-
+      - kaoyan
 networks:
-  kaoyanApp:
+  kaoyan:
