--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,3 @@
 spring:
-  jpa:
-    database: MYSQL
-    show-sql: true
-    hibernate.ddl-auto: update
-    hibernate.naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
-    properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
-  datasource:
-    username: root
-    password: mysqlpwd
-    driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/kaoyan?characterEncoding=utf8&useSSL=false
-    max-active: 20
-    max-idle: 8
-    min-idle: 8
-    initial-size: 10
-
-  admin:
-    uname: admin
-    pwd: letsgodude
-    phone: 15200296920
+  profiles:
+    active: prod
