config: update nginx.conf

--- a/docker-compose.online.yml
+++ b/docker-compose.online.yml
@@ -17,6 +17,7 @@ services:
       - kaoyan
 
   app:
+    image: dashmrl/kaoyan:latest
     build:
       context: .
       dockerfile: DockerfileOnline
