--- a/nginx.conf
+++ b/nginx.conf
@@ -14,9 +14,9 @@ server {
 
     ssl_session_cache    shared:SSL:1m;
     ssl_session_timeout  5m;
-    ssl_certificate         /etc/qcloud-cert/kaoyan.letsgoduet.top/1_kaoyan.letsgoduet.top_bundle.crt;
-    ssl_certificate_key     /etc/qcloud-cert/kaoyan.letsgoduet.top/2_kaoyan.letsgoduet.top.key;
-    ssl_trusted_certificate /etc/qcloud-cert/kaoyan.letsgoduet.top/1_kaoyan.letsgoduet.top_bundle.crt;
+    ssl_certificate         /etc/nginx/qcloud-cert/kaoyan.letsgoduet.top/1_kaoyan.letsgoduet.top_bundle.crt;
+    ssl_certificate_key     /etc/nginx/qcloud-cert/kaoyan.letsgoduet.top/2_kaoyan.letsgoduet.top.key;
+    ssl_trusted_certificate /etc/nginx/qcloud-cert/kaoyan.letsgoduet.top/1_kaoyan.letsgoduet.top_bundle.crt;
 
     ssl_prefer_server_ciphers  on;
     ssl_ciphers  "ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
@@ -24,7 +24,7 @@ server {
     # use command line
     # openssl dhparam -out dhparam.pem 2048
     # to generate Diffie Hellman Ephemeral Parameters
-    ssl_dhparam /etc/qcloud-cert/kaoyan.letsgoduet.top/dhparam.pem;
+    ssl_dhparam /etc/nginx/qcloud-cert/kaoyan.letsgoduet.top/dhparam.pem;
 
     add_header X-Frame-Options DENY;
     add_header X-Content-Type-Options nosniff;
@@ -47,7 +47,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://118.25.25.209:3003/$1$is_args$args;
+        proxy_pass http://127.0.0.1:3003/$1$is_args$args;
     }
     access_log  /etc/nginx/logs/kaoyan.letsgoduet.top/access.log format_access;
     error_log   /etc/nginx/logs/kaoyan.letsgoduet.top/error.log error;
