--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation('mysql:mysql-connector-java')
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-    implementation('org.springframework.security:spring-security-web')
-    implementation('org.springframework.security:spring-security-config')
+//    implementation('org.springframework.security:spring-security-web')
+//    implementation('org.springframework.security:spring-security-config')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
