--- a/nginx.conf
+++ b/nginx.conf
@@ -49,7 +49,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_pass http://127.0.0.1:3003/$1$is_args$args;
     }
-    access_log  /etc/nginx/logs/kaoyan.letsgoduet.top/access.log format_access;
+    access_log  /etc/nginx/logs/kaoyan.letsgoduet.top/access.log;
     error_log   /etc/nginx/logs/kaoyan.letsgoduet.top/error.log error;
 
 
