--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -7,7 +7,8 @@ services:
     expose:
       - "3306"
     volumes:
-      - ./sql/create_db.sql:/docker-entrypoint-initdb.d/create_db.sql
+      - ./mysql/create_db.sql:/docker-entrypoint-initdb.d/create_db.sql:ro
+      - ./mysql/custom.cnf:/etc/mysql/conf.d/custom.cnf:ro
     environment:
       TZ: Asia/Shanghai
       MYSQL_ROOT_PASSWORD: mysqlpwd
